# quickentity-editor-next

./: .deepsource.toml  .eslintrc.json  .gitignore  .prettierrc  .yarnrc.yml  BUILDING.md  README.md  package-lock.json  package.json  svelte.config.js  tsconfig.json  updates.json  vite.config.js
.github/workflows/: release.yml
buildsrc/: Cargo.toml
buildsrc/src/: lib.rs
game-file-extensions/: classes  cleanupTemporaryFiles.bat  convertAllASETMetas.js  convertAllCPPTMetas.js  convertAllCPPTs.js  convertAllMATTMetas.js  convertAllQNs.js  convertAllSwitches.js  convertAllTBLUs.js  convertAllUICBs.js  convertAllUICTMetas.js  convertCPPTMetaTask.js  convertQNTask.js  convertTBLUTask.js  convertTEMPMetaTask.js  convertTEMPTask.js  convertUICTMetaTask.js  doTheThing.bat  extractAllOfFiletypes.js  findUICBPropTypes.js  getAllMATEProps.js  getCPPTInfo.js  getCPPTOutputPins.js  getCPPTPins.js  getMATEPropsTask.js  package.json
intellisense-scripts/: UICBdecode.py  convertAllASETMetas.js  convertAllCPPTMetas.js  convertAllCPPTs.js  convertAllQNs.js  convertAllTBLUMetas.js  convertAllTBLUs.js  convertAllTEMPMetas.js  convertAllTEMPs.js  convertAllUICBs.js  convertAllUICTMetas.js  convertCPPTMetaTask.js  convertQNTask.js  convertTBLUMetaTask.js  convertTBLUTask.js  convertTEMPMetaTask.js  convertTEMPTask.js  convertUICTMetaTask.js  extractAllOfFiletypes.js  findUICBPropTypes.js  getCPPTInfo.js  package.json
src/: app.css  app.d.ts  app.html  hooks.ts
src-tauri/: Cargo.toml  entity.json  tauri.conf.json
src-tauri/src/: communications.rs  main.rs  messages.rs
src-tauri/src/sdk_editor_plugin/: domain.rs  mod.rs
src-tauri/src/udp/: mod.rs
src-tauri/src/websockets/: mod.rs
src/lib/: enums.json  intellisense.ts  json.ts  project-schema.json  property-type-schemas.json  quickentity-types.ts  rpkg.ts  schema.json  stores.ts  utils.ts
src/lib/components/: ColorPicker.svelte  Entity3DMesh.svelte  ExpandableSection.svelte  FileTree.svelte  ListEditor.svelte  MinimalTree.svelte  MonacoEditor.svelte  OverrideMonacoEditor.svelte  Tree.svelte  premade-templates.json  treeview.css
src/lib/in-vivo/: ZHMProperties.txt  editor.d.ts  gameServer.ts  knownPins.json  udp.ts
src/lib/rfc6902/: diff.ts  index.ts  patch.ts  (+2 more)
src/routes/: 3d.svelte  __layout.svelte  graph.svelte  index.svelte  metadata.svelte  overrides.svelte  settings.svelte  tree.svelte
static/baklava/: bundle.js  syrup-dark.css
(+39 files in other folders)
