[package]
name = "quickentity-editor"
version = "1.2.0"
description = "An editor for the QuickEntity format."
authors = [ "Atampy26" ]
license = "LGPL-3.0-only"
default-run = "quickentity-editor"
edition = "2021"
rust-version = "1.57"

[build-dependencies.tauri-build]
version = "1.0.4"
features = [ ]

[dependencies]
serde_json = "1.0"

  [dependencies.serde]
  version = "1.0"
  features = [ "derive" ]

  [dependencies.tauri]
  version = "1.1.1"
  features = [ "api-all", "updater" ]

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
