[package]
name = "quickentity-editor"
version = "1.30.0"
description = "An editor for the QuickEntity format."
authors = ["Atampy26"]
license = "GPL-3.0-only"
default-run = "quickentity-editor"
edition = "2021"
rust-version = "1.57"

[build-dependencies.tauri-build]
version = "1.0.4"
features = []

[dependencies]
serde_json = "1.0"
futures-util = "0.3.24"
tokio-tungstenite = "0.17.2"
thiserror = "1.0.36"
rand = "0.8.5"
bincode = "1.3.3"
serde_with = "3.0.0"

[dependencies.specta]
version = "1.0.4"
features = ["export"]

[dependencies.tokio]
version = "1.21.1"
features = ["macros"]

[dependencies.tokio-util]
version = "0.7.4"
features = ["net", "codec"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tauri]
version = "1.1.1"
features = ["api-all", "updater", "devtools"]

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
